--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <input type="text" id="name" placeholder="Your Name" />
+    <input type="text" id="phone" placeholder="Please Enter Your Phone Number" />
     <input type="text" id="address" placeholder="Delivery Address/ Pick-up (please indicate)" />
     <textarea id="notes" placeholder="Notes (optional)"></textarea>
 
