--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Restaurant Order via WhatsApp</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="logo"><img src="WhatsApp Image 2025-10-23 at 03.30.14_f75b7695.jpg"/></div>
@@ -30,7 +31,16 @@
     <button id="checkout">Checkout via WhatsApp</button>
     <button id="clear">Clear Cart</button>
   </div>
-
+   <div class="social-links">
+      <h3>Follow Us</h3>
+      <a href="https://facebook.com" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
+      <a href="https://instagram.com" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
+      <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp"><i class="fa fa-whatsapp"></i></a>
+    </div>
+  </div>
+<div class="notice">
+  <p><i>Dear Valued Customer, please complete your payment to initiate your order. Once payment is received, your order will be processed promptly, and you will receive a confirmation upon its completion.</i></p>
+</div>
   <script src="javascript.js"></script>
 </body>
 </html>
