--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="logo"><img src="WhatsApp Image 2025-10-23 at 03.30.14_f75b7695.jpg"/></div>
-
+<div class="over">
   <div class="container">
     <h1>🍕 Restaurant Menu</h1>
     <div id="menu" class="menu"></div>
@@ -30,16 +30,17 @@
 
     <button id="checkout">Checkout via WhatsApp</button>
     <button id="clear">Clear Cart</button>
+  <p><i>Dear Valued Customer, please complete your payment to initiate your order. Once payment is received, your order will be processed promptly, and you will receive a confirmation upon its completion.</i></p>
+
   </div>
-   <div class="social-links">
+  </div>
+   
+<div class="social-links">
       <h3>Follow Us</h3>
       <a href="https://facebook.com" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
-      <a href="https://instagram.com" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
+      <a href="https://www.instagram.com/homagrills?igsh=MWU2a21lamM0cW5pOA==" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
       <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp"><i class="fa fa-whatsapp"></i></a>
     </div>
-  </div>
-<div class="notice">
-  <p><i>Dear Valued Customer, please complete your payment to initiate your order. Once payment is received, your order will be processed promptly, and you will receive a confirmation upon its completion.</i></p>
 </div>
   <script src="javascript.js"></script>
 </body>
