--- a/index.html
+++ b/index.html
@@ -8,40 +8,59 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="logo"><img src="WhatsApp Image 2025-10-23 at 03.30.14_f75b7695.jpg"/></div>
-<div class="over">
-  <div class="container">
-    <h1>🍕 Restaurant Menu</h1>
-    <div id="menu" class="menu"></div>
-
-    <h2>Your Order</h2>
-    <div id="cart" class="cart"></div>
-
-    <div class="summary">
-      <p>Subtotal: ₦<span id="subtotal">0</span></p>
-      <p>Tax (7.5%): ₦<span id="tax">0</span></p>
-      <p><strong>Total: ₦<span id="total">0</span></strong></p>
-    </div>
-
-    <input type="text" id="name" placeholder="Your Name" />
-    <input type="text" id="phone" placeholder="Please Enter Your Phone Number" />
-    <input type="text" id="address" placeholder="Delivery Address/ Pick-up (please indicate)" />
-    <textarea id="notes" placeholder="Notes (optional)"></textarea>
-
-    <button id="checkout">Checkout via WhatsApp</button>
-    <button id="clear">Clear Cart</button>
-  <p><i>Dear Valued Customer, please complete your payment to initiate your order. Once payment is received, your order will be processed promptly, and you will receive a confirmation upon its completion.</i></p>
-
+  <!-- Fixed Logo -->
+  <div class="logo">
+    <img src="WhatsApp Image 2025-10-23 at 03.30.14_f75b7695.jpg" alt="Restaurant Logo" />
   </div>
-  </div>
-   
-<div class="social-links">
-      <h3>Follow Us</h3>
-      <a href="https://facebook.com" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
-      <a href="https://www.instagram.com/homagrills?igsh=MWU2a21lamM0cW5pOA==" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
-      <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp"><i class="fa fa-whatsapp"></i></a>
+
+  <div class="over">
+    <div class="container">
+      <h1>🍕 Restaurant Menu</h1>
+      <div id="menu" class="menu"></div>
+
+      <h2>Your Order</h2>
+      <div id="cart" class="cart"></div>
+
+      <div class="summary">
+        <p>Subtotal: ₦<span id="subtotal">0</span></p>
+        <p>Tax (7.5%): ₦<span id="tax">0</span></p>
+        <p id="delivery-fee-text" style="display:none;">Delivery Fee: ₦<span id="delivery-fee">1500</span></p>
+        <p><strong>Total: ₦<span id="total">0</span></strong></p>
+      </div>
+
+      <input type="text" id="name" placeholder="Your Name" />
+      <input type="text" id="phone" placeholder="Please Enter Your Phone Number" />
+
+      <label for="delivery">Delivery?</label>
+      <select id="delivery">
+        <option value="no">No (Pick-up)</option>
+        <option value="yes">Yes (₦1500 within Eagle Island)</option>
+      </select>
+
+      <input type="text" id="address" placeholder="Delivery Address / Pick-up Location" />
+      <textarea id="notes" placeholder="Notes (optional)"></textarea>
+
+      <button id="checkout">Checkout via WhatsApp</button>
+      <button id="clear">Clear Cart</button>
+
+      <p class="notice">
+        <i>
+          Dear Valued Customer, please complete your payment to initiate your order.
+          Once payment is received, your order will be processed promptly,
+          and you will receive a confirmation upon its completion.
+        </i>
+      </p>
     </div>
-</div>
+  </div>
+
+  <!-- Social Icons -->
+  <div class="social-links">
+    <h3>Follow Us</h3>
+    <a href="https://facebook.com" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
+    <a href="https://instagram.com" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
+    <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp"><i class="fa fa-whatsapp"></i></a>
+  </div>
+
   <script src="javascript.js"></script>
 </body>
 </html>
