--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <option value="">-- Select Delivery Option --</option>
   <option value="within">Delivery within Eagle Island (₦1500)</option>
   <option value="outside">Delivery outside Eagle Island (negotiated)</option>
-  <option value="none">No Delivery (Pickup)</option>
+  <option value="none">Store Pick-up</option>
 </select>
 
 
