--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <!-- Social Icons -->
   <div class="social-links">
     <h3>Follow Us</h3>
-    <a href="https://facebook.com" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
-    <a href="https://instagram.com" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=100083109267401&mibextid=ZbWKwL" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
+    <a href="https://www.instagram.com/homagrills?igsh=MWU2a21lamM0cW5pOA==" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
     <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp"><i class="fa fa-whatsapp"></i></a>
   </div>
 
