--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Fixed Logo -->
   <div class="logo">
     <img src="WhatsApp Image 2025-10-23 at 03.30.14_f75b7695.jpg" alt="Restaurant Logo" />
+    <p>A Tasty Bite to Crave</p>
   </div>
 
   <div class="over">
@@ -34,7 +35,7 @@
       <h3>Delivery Option</h3>
 <select id="delivery" class="delivery-select">
   <option value="">-- Select Delivery Option --</option>
-  <option value="within">Delivery within Eagle Island (₦1500)</option>
+  <option value="within">Delivery within Eagle Island (₦1000)</option>
   <option value="outside">Delivery outside Eagle Island (negotiated)</option>
   <option value="none">Store Pick-up</option>
 </select>
