--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <select id="delivery" class="delivery-select">
   <option value="">-- Select Delivery Option --</option>
   <option value="within">Delivery within Eagle Island (₦1000)</option>
-  <option value="outside">Delivery outside Eagle Island (negotiated)</option>
+  <option value="outside">Delivery outside Eagle Island (negotiable)</option>
   <option value="none">Store Pick-up</option>
 </select>
 
