--- a/index.html
+++ b/index.html
@@ -57,13 +57,31 @@
     </div>
   </div>
 
+<!-- Customer Care Floating Button -->
+<div class="customer-care">
+  <button id="careBtn">💬</button>
+  <div id="careOptions" class="care-options hidden">
+    <button class="option-btn" data-type="Complain">😠 Complain</button>
+    <button class="option-btn" data-type="Review">⭐ Review</button>
+  </div>
+
+  <div id="careForm" class="care-form hidden">
+    <h3 id="formTitle"></h3>
+    <input type="email" id="careEmail" placeholder="Your Email" required />
+    <textarea id="careMessage" placeholder="Write your message..." required></textarea>
+    <button id="submitCare">📩 Submit</button>
+    <button id="cancelCare">❌ Cancel</button>
+  </div>
+</div>
+
+
   <!-- Social Icons -->
-  <div class="social-links">
+  <footer class="social-links">
     <h3>Follow Us</h3>
     <a href="https://www.facebook.com/profile.php?id=100083109267401&mibextid=ZbWKwL" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
     <a href="https://www.instagram.com/homagrills?igsh=MWU2a21lamM0cW5pOA==" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
     <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp"><i class="fa fa-whatsapp"></i></a>
-  </div>
+  </footer>
 
   <script src="javascript.js"></script>
 </body>
