--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h3 id="formTitle"></h3>
     <input type="email" id="careEmail" placeholder="Your Email" required />
     <textarea id="careMessage" placeholder="Write your message..." required></textarea>
-    <button id="submitCare">📩 Submit</button>
+    <button id="submitCare" type="button">📩 Submit</button>
     <button id="cancelCare">❌ Cancel</button>
   </div>
 </div>
