--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <span>Shawarma</span>
     </button>
     <div class="category-info" id="shawarma-info">
+      <button class="close-desc">&times;</button>
       <h4>Shawarma</h4>
       <p>Freshly grilled beef, chicken, or mixed shawarma wrapped
          in warm flatbread and layered with crisp vegetables, 
@@ -77,6 +78,7 @@
       <span>Grills & BBQ</span>
     </button>
     <div class="category-info" id="grills-info">
+      <button class="close-desc">&times;</button>
       <h4>Grills & BBQ</h4>
       <p>A rich selection of flame-grilled meats prepared over open heat to lock in flavor and tenderness.
          From spicy snails to juicy shrimp and BBQ classics, this category delivers deep smoky taste,
@@ -91,6 +93,7 @@
       <span>Protein & Fries</span>
     </button>
     <div class="category-info" id="protein-info">
+      <button class="close-desc">&times;</button>
       <h4>Protein & Fries</h4>
       <p>Golden crispy fries served with generous portions of protein including chicken,
          turkey, beef, or egg sauce. Comfort food done right — filling, flavorful,
@@ -105,6 +108,7 @@
       <span>Grilled Fish</span>
     </button>
     <div class="category-info" id="fish-info">
+      <button class="close-desc">&times;</button>
       <h4>Grilled Fish</h4>
       <p>Expertly seasoned and grilled fish cooked to perfection with a crispy outer layer and tender, juicy inside.
          From catfish to tilapia and croaker, each dish is infused with rich spices and grilled for maximum flavor.</p>
@@ -118,6 +122,7 @@
       <span>Loaded Chinese Fries</span>
     </button>
     <div class="category-info" id="fries-info">
+      <button class="close-desc">&times;</button>
       <h4>Loaded Chinese Fries</h4>
       <p>A delicious fusion of crispy fries tossed with Chinese-style sauces, vegetables, and protein toppings. 
         Packed with flavor, color, and texture — every serving is rich, satisfying, and unforgettable.</p>
@@ -321,13 +326,51 @@
 </div>
 
 
-<!-- Social Icons -->
-  <footer class="social-links">
-    <h3>Follow Us</h3>
-    <a href="https://www.facebook.com/profile.php?id=100083109267401&mibextid=ZbWKwL" target="_blank" class="social-icon facebook"><i class="fa fa-facebook"></i></a>
-    <a href="https://www.instagram.com/homagrills?igsh=MWU2a21lamM0cW5pOA==" target="_blank" class="social-icon instagram"><i class="fa fa-instagram"></i></a>
-    <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp"><i class="fa fa-whatsapp"></i></a>
-  </footer> -->
+<footer class="footer">
+  <div class="footer-container">
+
+    <!-- Brand / About -->
+    <div class="footer-box">
+      <h3>Homa Grills</h3>
+      <p>
+        Serving delicious shawarma, grills & BBQ made fresh with love.
+        Taste the flavor. Feel the fire 🔥
+      </p>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-box">
+      <h3>Contact Us</h3>
+      <p><i class="fa fa-phone"></i> +234 703 510 7709</p>
+      <p><i class="fa fa-envelope"></i><a href="mailto:homagrills@gmail.com" class="ema">homagrills@gmail.com</a></p>
+      <p><i class="fa fa-map-marker"></i> Port Harcourt, Nigeria</p>
+    </div>
+
+    <!-- Social Links -->
+    <div class="footer-box">
+      <h3>Follow Us</h3>
+      <div class="social-links">
+        <a href="https://www.facebook.com/profile.php?id=100083109267401" target="_blank" class="social-icon facebook">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+
+        <a href="https://www.instagram.com/homagrills" target="_blank" class="social-icon instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp">
+          <i class="fa-brands fa-whatsapp"></i>
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bottom -->
+  <div class="footer-bottom">
+    <p>© 2026 Homa Grills. All Rights Reserved.</p>
+  </div>
+</footer>
+
 
 <script src="script.js">
 </script>
